fixed coin feed cutoff on home page

--- a/client/src/components/modules/Home/Feed.css
+++ b/client/src/components/modules/Home/Feed.css
@@ -3,6 +3,7 @@
     grid-column: 1;
     grid-row: 2;
     border-radius: 9.10004px;
-    height: 700px;
+    height: 630px;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
