--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -23,5 +23,5 @@
     height: 675px;
     width: 410px;
     justify-content: left;
-    overflow-y: hidden;
+    
 }
